# XcellAccession

./: .gitignore  README.md  db.sqlite3  manage.py  pyproject.toml
XcellAccession/: asgi.py  settings.py  urls.py  wsgi.py
authentication/: admin.py  forms.py  models.py  views.py
authentication/migrations/: 0001_initial.py  0002_alter_usermodel_email.py
logged_only/: views.py
search/: forms.py  views.py
shared/: names.py  routes.py  templates.py
shared/layouts/: main.py
shared/tables/: totals.py
templates/: FISHform.html  accession.html  form.Edit.html  index.html  login.html  nav.html  reports.html  search.html  signup.html  summernote.html  testing.html
templates/layouts/main/: index.html  menu.html.part  user.html.part
templates/layouts/main/contents/accession/: index.html.part
templates/layouts/main/header/: index.html.part
templates/registration/: login.html  password.html  signup.html
web_app/: admin.py  forms.py  models.py  views.py
web_app/migrations/: 0001_initial.py  0002_rename_inputmodel_accessionmodel.py  0003_rename_accessionmodel_patientmodel.py  0004_auto_20211122_0919.py  0005_auto_20211122_1238.py  0006_auto_20211122_1731.py  0007_casemodel.py  0008_delete_casemodel.py  0009_casemodel.py  0010_auto_20211123_0153.py  0011_casemodel_patient.py  0012_auto_20211123_0343.py  0013_auto_20211123_0346.py  0014_reportselectionmodel.py  0015_auto_20211126_0653.py  0016_auto_20211127_0843.py
web_app/static/assets/css/: main.css
xcellaccession.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
(+15 files in other folders)
